@@ -6,3 +6,4 @@ Since 0.6.0
   `Executor` instead of `Database`
 - Re-export rorm_sql as sql instead of bloating the whole namespace by using *
 - Updated rorm_sql to 0.6
+- Implemented DynamicExecutor
